JGISShell release version 1.0.7 unstable